k8s/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
spec:
  tls:
  - hosts:
    - kiali.kieni.at
    secretName: tls-secret
  rules:
  - host: kiali.kieni.at
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kiali
              port:
                number: 20001
